# rustbase

./: .deploy.sample  .gitignore  .ports.sample  .template-sync.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.ps1  llms.txt  package.json  playwright.config.js  playwright.config.ts
.claude/agents/: artisan.md  red-team.md
.claude/commands/: code-reviewers.md  commit.md  html-report.md  implement.md  release.md  retrospect.md  template-backfeed.md  template-improve.md  template-sync.md  todo.md  update-deps.md
.claude/hooks/: stop-check.sh
.claude/skills/web-dev/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/rustbase/: Cargo.toml
crates/rustbase-web/: Cargo.toml
crates/rustbase-web/src/: main.rs
crates/rustbase-web/src/api/: mod.rs
crates/rustbase/tests/: integration_test.rs
deploy/: rustbase-web.service
docs/: deployment.md  todo.md
docs/ai-agents/: html-report-template.html
docs/developer/: DIARY.md  artisan-log.md  artisan-resolved.md  backfeed-ledger.toml  jutro-improvements-plan.md  ledgerstone-improvements-plan.md  redteam-log.md  redteam-resolved.md  template-feedback.md
docs/issues/: changelog-version-drift.md  coverage-metadata-ignore.md  template-tooling-cli-redesign.md
e2e/tests/: smoke.spec.js
frontend/: .jscpd.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
frontend/src/: App.svelte  App.test.js  app.css  vite-env.d.ts
frontend/src/lib/: sort.ts
scripts/: e2e.sh  kill-servers.sh
scripts/lib/: port-utils.sh
xtask/: Cargo.toml
xtask/src/: audit.rs  backfeed.rs  changelog.rs  check.rs  clean_cache.rs  clippy_cmd.rs  coverage.rs  dep_age.rs  deploy.rs  deploy_config.rs  deploy_guard.rs  deploy_remote.rs  deploy_setup.rs  feedback.rs  frontend.rs  frontend_check.rs  frontend_dupes.rs  frontend_fmt.rs  frontend_test.rs  helpers.rs  main.rs  sync.rs  test_cmd.rs  todo.rs  validate.rs
xtask/src/dep_age/: gate.rs  preflight.rs
